# kmms_prog_2023

./: .gitignore  README.md  build.bat  build.sh  run_tests.sh
projects/: .gitignore  CMakeLists.txt
projects/bubble_sort_mf/: run_bubble_sort_mf.sh
projects/npushkarev_bubble/: CMakeLists.txt  run_bubble.sh
projects/obuchaika/: run_obuchaika.sh
projects/refactoring/: run_refactoring.bat  run_refactoring.sh
projects/scl/: .gitignore  README.md
projects/scl/src/: CMakeLists.txt
projects/scl/src/long_number/: long_number.cpp  long_number.hpp
projects/scl/test/: CMakeLists.txt
projects/scl/test/long_number/: CMakeLists.txt  test_long_number.cpp
projects/smartSort/: CMakeLists.txt  run_smartSort.sh
projects/smartSort/source/: .CMakeLists.txt.swp  CMakeLists.txt
